Docker is now working.